# Python_DS_Piscine

./: .gitignore
Day1/ex00/: Hello.py
Day1/ex01/: format_ft_time.py
Day1/ex02/: find_ft_type.py  tester.py
Day1/ex03/: NULL_not_found.py  tester.py
Day1/ex04/: whatis.py
Day1/ex05/: building.py
Day1/ex06/: filterstring.py  ft_filter.py
Day1/ex07/: sos.py
Day1/ex08/: Loading.py
Day1/ex09/: README.md  pyproject.toml
Day1/ex09/ft_package/: utils.py
Day2/ex00/: give_bmi.py
Day2/ex01/: array2D.py
Day2/ex02/: load_image.py
Day2/ex03/: load_image.py  zoom.py
Day2/ex04/: load_image.py  rotate.py
Day2/ex05/: pimp_image.py
Day3/: requirements.txt
Day3/ex00/: load_csv.py  loas_csv.py
Day3/ex01/: aff_life.py
Day3/ex02/: all_pop.py
Day3/ex03/: projection_life.py
Day4/ex00/: S1E9.py  tester2.py
Day4/ex01/: S1E7.py  S1E9.py
Day4/ex02/: DiamondTrap.py
Day4/ex03/: ft_calculator.py  tester.py
Day4/ex04/: ft_calculator.py
